[gd_scene load_steps=5 format=3 uid="uid://dwuxfx8f44d2e"]

[ext_resource type="Script" uid="uid://dm0t46j3box7j" path="res://Script/Traps/spike.gd" id="1_30vfe"]
[ext_resource type="Texture2D" uid="uid://cuddvskyxondn" path="res://icon.svg" id="1_jt5no"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30vfe"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhbfc"]
size = Vector2(12, 12)

[node name="Spike" type="Node2D"]
script = ExtResource("1_30vfe")

[node name="SpriteSpike" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_jt5no")

[node name="AreaDetectable" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectable"]
shape = SubResource("RectangleShape2D_30vfe")
debug_color = Color(0, 0.642908, 0.309568, 0.42)

[node name="AreaDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeath"]
shape = SubResource("RectangleShape2D_fhbfc")
debug_color = Color(0.856732, 0, 0.282677, 0.42)

[node name="LabelBubble" type="Label" parent="."]
visible = false
offset_left = -39.0
offset_top = -26.0
offset_right = -12.0
offset_bottom = -3.0

[connection signal="body_entered" from="AreaDetectable" to="." method="_on_area_detectable_body_entered"]
[connection signal="body_entered" from="AreaDeath" to="." method="_on_area_death_body_entered"]
